XMLHttpRequest: do not sniff text/html, and do not sniff XML when responseType is set to "text" https://bugs.webkit.org/show_bug.cgi?id=168724

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline web-platform-tests now that all checks are passing.

* web-platform-tests/XMLHttpRequest/responsetext-decoding-expected.txt:

Source/WebCore:

WebKit enabled HTML / XML charset detection for HTML-ish / XML-ish
responses even when response type is text, which does not match the
specification.

This patch is based on the following Blink patch by Yutaka Hirano <yhirano@chromium.org>:
- https://chromium.googlesource.com/chromium/src.git/+/47e4fc53e6d68c0a788fcc26de598b9e3848033f

Tests:
imported/w3c/web-platform-tests/XMLHttpRequest/responsetext-decoding.htm
imported/w3c/web-platform-tests/XMLHttpRequest/responsedocument-decoding.htm

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createDecoder const):
(WebCore::XMLHttpRequest::didReceiveData):
* xml/XMLHttpRequest.h:

LayoutTests:

Drop outdated test, proper behavior is covered by web-platform-tests.

* fast/xmlhttprequest/xmlhttprequest-html-response-encoding-expected.txt: Removed.
* fast/xmlhttprequest/xmlhttprequest-html-response-encoding.html: Removed.


Canonical link: https://commits.webkit.org/194446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223217 268f45cc-cd09-0410-ab3c-d52691b4dbfc